--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/quill@2/dist/quill.snow.css" rel="stylesheet" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Quickblog</title>
 </head>
 
 <body>
